--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link rel="icon" href="%PUBLIC_URL%/32x32.png" sizes="32x32" type="image/png">
     <link rel="icon" href="%PUBLIC_URL%/64x64.png" sizes="64x64" type="image/png">
     <link rel="icon" href="%PUBLIC_URL%/128x128.png" sizes="128x128" type="image/png">
+    <link rel="icon" href="%PUBLIC_URL%/256x256.png" sizes="256x256" type="image/png">
     <link rel="icon" href="%PUBLIC_URL%/512x512.png" sizes="512x512" type="image/png">
 
 
