--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" property="og:image" content="https://afnan-gif-generator.netlify.app/favicon.svg">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
@@ -8,6 +8,11 @@
     name="Random Gif"
     content="Random Gif Generator App"
     />
+    <meta name="description" content="Random Gif Generator">
+    <meta name="keywords" content="gif, random-gif, gif-generator">
+    <meta name="author" content="Mohammad Afnan">
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/256x256.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
