--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" property="og:image" content="https://afnan-gif-generator.netlify.app/favicon.svg">
+<html lang="en" property="og:image" content="%PUBLIC_URL%/favicon.svg">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
