--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" property="og:image" content="%PUBLIC_URL%/favicon.svg">
+<html lang="en" property="og:image" content="%PUBLIC_URL%/maskable.png">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
@@ -27,6 +27,7 @@
     <link rel="icon" href="%PUBLIC_URL%/128x128.png" sizes="128x128" type="image/png">
     <link rel="icon" href="%PUBLIC_URL%/256x256.png" sizes="256x256" type="image/png">
     <link rel="icon" href="%PUBLIC_URL%/512x512.png" sizes="512x512" type="image/png">
+    <link rel="icon" href="%PUBLIC_URL%/maskable.png" sizes="any" type="image/png">
 
 
     <title>Gif Generator</title>
