--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,28 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-    name="Random Gif"
+    name="Random GIF"
     content="Random Gif Generator App"
     />
     <meta name="description" content="Random Gif Generator">
     <meta name="keywords" content="gif, random-gif, gif-generator">
     <meta name="author" content="Mohammad Afnan">
+    <meta property="og:url" content="https://afnan-gif-generator.netlify.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="GIF Generator">
+    <meta property="og:image" content="%PUBLIC_URL%/maskable.png">
 
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/256x256.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+     <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="afnan-gif-generator.netlify.app">
+    <meta property="twitter:url" content="https://afnan-gif-generator.netlify.app/">
+    <meta name="twitter:title" content="GIF Generator">
+    <meta name="twitter:description" content="Random Gif Generator">
+    <meta name="twitter:image" content="%PUBLIC_URL%/maskable.png">
     
     <!-- Favicons -->
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
@@ -30,7 +42,7 @@
     <link rel="icon" href="%PUBLIC_URL%/maskable.png" sizes="any" type="image/png">
 
 
-    <title>Gif Generator</title>
+    <title>GIF Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
