--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://afnan-gif-generator.netlify.app/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="GIF Generator">
-    <meta property="og:image" content="%PUBLIC_URL%/maskable.png">
+    <meta property="og:image" content="https://afnan-gif-generator.netlify.app/maskable.png">
 
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/256x256.png" />
@@ -26,7 +26,7 @@
     <meta property="twitter:url" content="https://afnan-gif-generator.netlify.app/">
     <meta name="twitter:title" content="GIF Generator">
     <meta name="twitter:description" content="Random Gif Generator">
-    <meta name="twitter:image" content="%PUBLIC_URL%/maskable.png">
+    <meta name="twitter:image" content="https://afnan-gif-generator.netlify.app/maskable.png">
     
     <!-- Favicons -->
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
